--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,12 @@
 .navbar-toggler {
   border: none;
 }
+
+body {
+  background: url(./components/pages/bak.jpg) no-repeat center center fixed;
+  -webkit-background: cover;
+  -moz-background: cover;
+  -o-background: cover;
+  background: cover;
+  background-size: 1600px 850px;
+}
