create login form

--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,12 @@ body {
   background: cover;
   background-size: 1600px 850px;
 }
+
+.Login-form {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+  height: 100%;
+  color: gold;
+}
