--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,12 @@ body {
   height: 100%;
   color: gold;
 }
+
+.Signup-form {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+  height: 100%;
+  color: gold;
+}
